--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </figure>
     </section>
     <footer class="footer">
-        <h4>Made with ❤️️ by Horiseon</h4>
+        <h4>Refactored ❤️️ by Olivia Haejeong Kim</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
